# AgentOS

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/agentos-cli/: Cargo.toml
crates/agentos-cli/src/: args.rs  client.rs  main.rs
crates/agentos-client/: Cargo.toml
crates/agentos-client/examples/: embed.rs
crates/agentos-client/src/: lib.rs
crates/agentos-core/: Cargo.toml
crates/agentos-core/src/: error.rs  event.rs  lib.rs  policy.rs  protocol.rs  spec.rs  state.rs
crates/agentos-daemon/: Cargo.toml
crates/agentos-daemon/src/: frames.rs  main.rs  monitor.rs  proxy.rs  registry.rs  rpc.rs  run.rs
crates/agentos-guest-agent/: Cargo.toml
crates/agentos-guest-agent/src/: main.rs
crates/agentos-vmm/: Cargo.toml
crates/agentos-vmm/src/: lib.rs
crates/agentos-vmm/src/backends/: cloud_hypervisor.rs  macos.rs  mod.rs  windows.rs
gui/: Cargo.toml  tauri.conf.json
gui/src/: main.rs
scripts/: apk-fetch.py  build-guest-image.sh  build-vmhelper.sh  ch-diag.sh  e2e-test.sh  guest-diag.sh
vmhelper/: main.swift
