[workspace]
resolver = "2"
members = [
    "crates/agentos-core",
    "crates/agentos-vmm",
    "crates/agentos-daemon",
    "crates/agentos-cli",
    "crates/agentos-client",
    "crates/agentos-guest-agent",
    "gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rsngpt/AgentOS"

[workspace.dependencies]
agentos-core = { path = "crates/agentos-core" }
agentos-vmm = { path = "crates/agentos-vmm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "process", "signal", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
