[package]
name = "agentos-cli"
description = "agentos: command-line client for the Agent OS daemon."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos"
path = "src/main.rs"

[dependencies]
agentos-client = { path = "../agentos-client" }
agentos-core.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
