[package]
name = "agentos-client"
description = "Shared client for the agentosd Unix socket: connection with daemon auto-start, unary calls, and streaming methods. Used by the CLI and the GUI."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
tokio.workspace = true
