[package]
name = "agentos-client"
description = "Shared client for the agentosd Unix socket: connection with daemon auto-start, unary calls, and streaming methods. Used by the CLI and the GUI."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentos-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
