[package]
name = "agentos-core"
description = "Core domain types for Agent OS: sandbox specs, policies, events, and the guest control protocol. No I/O."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
