[package]
name = "agentos-vmm"
description = "Hypervisor abstraction for Agent OS: the VmmBackend/VmHandle traits and per-OS microVM backends."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentos-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
